# WCAI

./: .gitignore  CLAUDE.md  README.md  acme_engineering.yaml  cli.py  company_config.yaml  generators.py  loader.py  model.py  pyproject.toml  run.py  validators.py  wizard.py
configs/examples/: acme_engineering.yaml
docs/: claude-answer-windchill-implementation-guide.docx  copilot-answer-windchill-implementation-guide.docx  index.html
docs/configs/: acme_engineering.yaml
docs/css/: style.css
docs/js/: app-new.js  app.js  generators.js  loader.js  model.js  notepad.js  reference-app.js  speech.js  teams-app.js  teams-model.js  teams-validators.js  validators.js
wc_config/: __init__.py  __main__.py  cli.py  generators.py  loader.py  model.py  validators.py  wizard.py
