[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-config"
version = "0.1.0"
description = "WCAI -- Windchill Config AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
wc-config = "wc_config.cli:main"

[tool.setuptools.packages.find]
include = ["wc_config*"]
